<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="203dp"
        android:layout_height="33dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/home_page"
        android:textAlignment="center"
        android:textColor="#457B06"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nutritionalStatusButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/nutritionalStatusButton"
        android:layout_width="330dp"
        android:layout_height="58dp"
        android:layout_marginTop="96dp"
        app:backgroundTint="@null"
        android:background="@drawable/custom_button"
        android:textSize="20dp"
        android:text="@string/t_nh_tr_ng_dinh_d_ng"
        app:layout_constraintBottom_toTopOf="@+id/physicalActivityButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <Button
        android:id="@+id/physicalActivityButton"
        android:layout_width="330dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        app:backgroundTint="@null"
        android:background="@drawable/custom_button"
        android:text="@string/kh_u_ph_n_n"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/dietaryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nutritionalStatusButton"/>

    <Button
        android:id="@+id/dietaryButton"
        android:layout_width="330dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        app:backgroundTint="@null"
        android:background="@drawable/custom_button"
        android:text="@string/ch_t_p_luy_n"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/physicalActivityButton"/>


</androidx.constraintlayout.widget.ConstraintLayout>