<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".RegisterPage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/ng_k_t_i_kho_n"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#457B06"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/datePickerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="295dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/t_n"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="LabelFor,MissingConstraints">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/datePickerButton"
        style="?android:spinnerStyle"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="118dp"
        android:background="@drawable/custom_date"
        android:ems="10"
        android:onClick="openDatePicker"
        android:textColor="#787777"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText7"
        app:layout_constraintTop_toTopOf="@+id/editTextText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextText7"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerButton"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="295dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/m_t_kh_u"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"></com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_button"
        android:text="@string/ng_k"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/bu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText7"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/bu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đã có tài khoản?"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đăng nhập"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#2196F3"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>