<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#F7FFFFFF"
    android:focusableInTouchMode="true"
    android:keepScreenOn="true"
    tools:context=".Dietary">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/name_guide_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.22"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/name_guide_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.043"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Khẩu phần"
        android:textColor="#00725E"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/name_guide_4"
        app:layout_constraintEnd_toEndOf="@id/name_guide_2"
        app:layout_constraintStart_toStartOf="@id/name_guide_1"
        app:layout_constraintTop_toTopOf="@id/name_guide_3"
        app:layout_constraintVertical_bias="0.138" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/name_guide_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.78"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/name_guide_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/back_guide_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/back_guide_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/back_to_home_button"
        android:textSize="20dp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/back_guide_4"
        app:layout_constraintEnd_toEndOf="@id/back_guide_2"
        app:layout_constraintStart_toStartOf="@id/back_guide_1"
        app:layout_constraintTop_toTopOf="@id/back_guide_3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/back_guide_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/back_guide_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06"/>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F7FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m_n_n"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/th_c_ph_m"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_a_u_ng"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nh_t_k"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pageViewer"
        android:layout_width="364dp"
        android:layout_height="496dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911">

    </androidx.viewpager.widget.ViewPager>

</androidx.constraintlayout.widget.ConstraintLayout>